--- a/voluncheer/templates/profiles/savedevents.html
+++ b/voluncheer/templates/profiles/savedevents.html
@@ -34,6 +34,10 @@
                 <a href="{% url 'saved_events' %}" class="active">MY VOLUNCHEERS</a>
                 <hr align="center">
             </div>
+            <div class="url">
+                <a href="{% url 'create_post' %}" >CREATE POST</a>
+                <hr align="center">
+            </div>
         </div>
     </div>
     <!-- Main -->
@@ -48,12 +52,17 @@
                         {% if opportunity.photo %}
 					    <a href="#"><img src="{{opportunity.photo.url}}" alt="" class="vol-position-image" width="275px"/></a>
                         {% endif %}
-					    <p class="vol-position-disciption-h1">{{ opportunity.title }}</p>
-                        <p class="vol-position-disciption-h3">Pubdate: {{ opportunity.pubdate }}</p>
-                        <p class="vol-position-disciption-h2">Address: {{ opportunity.address_1 }}</p>
-                        <p class="vol-position-disciption-h2">Date: {{ opportunity.date }}</p>
-                        <p class="vol-position-disciption-h2">End: {{ opportunity.end }}</p>
-                        <p class="vol-position-disciption-h2">{{ opportunity.description }}</p>
+					    <p class="vol-position-description-h1">{{ opportunity.title }}</p>
+                        {%if user.is_volunteer%}
+                        <p class="vol-position-description-h3">
+                            Published by: <a href="{%url 'organization_view' opportunity.organization.pk%}">{{ opportunity.organization }}</a>
+                        </p>
+                        {%endif%}
+                        <p class="vol-position-description-h3">Pubdate: {{ opportunity.pubdate }}</p>
+                        <p class="vol-position-description-h2">Address: {{ opportunity.address_1 }}</p>
+                        <p class="vol-position-description-h2">Date: {{ opportunity.date }}</p>
+                        <p class="vol-position-description-h2">End: {{ opportunity.end }}</p>
+                        <p class="vol-position-description-h2">{{ opportunity.description }}</p>
                         <div class="url"><a href="{% url 'deregister_volunteer' opportunity.pk %}" class="readmore">Not Interested Anymore</a></div>
                         <hr align="center">
 				    </article>
@@ -64,11 +73,11 @@
         <div class="card">
             {% for opportunity in opportunity_attended %}
                 <article>
-				    <p class="vol-position-disciption-h1">{{ opportunity.title }}</p>
-                    <p class="vol-position-disciption-h2">Address: {{ opportunity.address_1 }}</p>
-                    <p class="vol-position-disciption-h2">Hours: {{ opportunity.date }}</p>
-                    <p class="vol-position-disciption-h2">End: {{ opportunity.end }}</p>
-                    <p class="vol-position-disciption-h2">{{ opportunity.description }}</p>
+				    <p class="vol-position-description-h1">{{ opportunity.title }}</p>
+                    <p class="vol-position-description-h2">Address: {{ opportunity.address_1 }}</p>
+                    <p class="vol-position-description-h2">Hours: {{ opportunity.date }}</p>
+                    <p class="vol-position-description-h2">End: {{ opportunity.end }}</p>
+                    <p class="vol-position-description-h2">{{ opportunity.description }}</p>
                     <hr align="center">
 				</article>
             {% endfor %}
