--- a/voluncheer/templates/voluncheer/map.html
+++ b/voluncheer/templates/voluncheer/map.html
@@ -44,9 +44,9 @@
     });
   </script>
 
-  <script
+  <!-- <script
     src="https://maps.googleapis.com/maps/api/js?key={{GOOGLE_MAPS_API_KEY}}&libraries=places&callback=initMap&v=weekly"
-    defer></script>
+    defer></script> -->
 </body>
 
 </html>
