--- a/voluncheer/templates/voluncheer/opportunityboard.html
+++ b/voluncheer/templates/voluncheer/opportunityboard.html
@@ -11,7 +11,6 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
-  <script type="module" src="{% static 'js/opportunityboard.js' %}"></script>
   <!--[if lt IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
@@ -59,12 +58,10 @@
                     <li><input class="category" type="checkbox" name="category" value="{{ category }}">{{ category }}
                       <ul>
                         {% for subcategory, subsubcategories in subcategories.items %}
-                        <li><input class="category" type="checkbox" name="category" value="{{ subcategory }}">{{
-                          subcategory }}
+                        <li><input class="category" type="checkbox" name="category" value="{{ subcategory }}">{{ subcategory }}
                           <ul>
                             {% for subsubcategory in subsubcategories %}
-                            <li><input class="category" type="checkbox" name="category" value="{{ subsubcategory }}">{{
-                              subsubcategory }}</li>
+                            <li><input class="category" type="checkbox" name="category" value="{{ subsubcategory }}">{{ subsubcategory }}</li>
                             {% endfor %}
                           </ul>
                         </li>
@@ -86,8 +83,7 @@
                     <li>{{ type }}
                       <ul>
                         {% for duration in durations %}
-                        <li><input class="duration" type="checkbox" name="duration" value="{{ duration }}">{{ duration
-                          }}</li>
+                        <li><input class="duration" type="checkbox" name="duration" value="{{ duration }}">{{ duration }}</li>
                         {% endfor %}
                       </ul>
                     </li>
@@ -134,9 +130,7 @@
   </div>
   {# <div id="adbanner">#}
     {# <div id="ad">#}
-      {# <a href="#">
-        <p>Advertise Here</p>
-      </a>#}
+      {# <a href="#"><p>Advertise Here</p></a>#}
       {# </div>#}
     {# </div>#}
   <div id="secwrapper">
@@ -152,14 +146,7 @@
           <img src="../../static/images/badge-5.png" alt="" />
           <img src="../../static/images/badge-6.png" alt="" />
         </article>
-        {# <article>#}
-          {# <a href="#"><img src="../../static/images/5.jpg" alt="" /></a>#}
-          {# <h1>Aenean Quis Dignissim Diam</h1>#}
-          {# <p>Vulputate ac sit aenean quis dignissim diam. Etiam venenatis congue velit, varius gravida mi volutpat
-            ac. Sed ut pretium dolor. Etiam tempor felis ac eros dictum quis consectetur dolor tristique. Aliquam
-            scelerisque, odio vel luctus commodo, nisl nisl vehicula metus, ut lobortis eros sem blandit est.</p>#}
-          {# <a href="#" class="readmore">Read more</a>#}
-          {# </article>#}
+
         {# django script goes here #}
         {% csrf_token %}
         {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
@@ -173,8 +160,7 @@
           <p class="vol-position-description-h1">{{ opportunity.title }}</p>
           {%if user.is_volunteer%}
           <p class="vol-position-description-h3">
-            Published by: <a href="{%url 'organization_view' opportunity.organization.pk%}">{{ opportunity.organization
-              }}</a>
+            Published by: <a href="{%url 'organization_view' opportunity.organization.pk%}">{{ opportunity.organization }}</a>
           </p>
           {%endif%}
           <p class="vol-position-description-h3">Pubdate: {{ opportunity.pubdate }}</p>
