--- a/voluncheer/templates/voluncheer/map.html
+++ b/voluncheer/templates/voluncheer/map.html
@@ -1,67 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>New York Organizations Map</title>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <script src="https://use.fontawesome.com/releases/v6.2.0/js/all.js"></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
-    />
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/map.css' %}" />
-    <script src="{% static 'js/map.js' %}"></script>
-  </head>
 
-  <body>
-    <div class="container">
-      <a href="{% url 'home' %}"><img
-        src="{% static 'images/voluncheer_logo.png' %}"
-        alt="logo"
-        class="logo title"
-        height="80px"
-      /></a>
-      {% block content %}
-      <div>
-        <h2>
-          Search for an address
-          <span style="font-size: 0.5em">
-            <input
-              id="address"
-              type="text"
-              style="width: 20em; border-color: black;"
-              placeholder="Enter a location"
-            />
-          </span>
-        </h2>
-      </div>
-      <div id="map"></div>
-      <div id="infowindow-content">
-        <span id="place-name" class="title"></span><br />
-        <span id="place-address"></span>
-      </div>
-      {% endblock %}
-      <p class="text-center top_spac">
-        Copyright &copy 2023 VolunCheer, org. All Rights Reserved.
-      </p>
+<head>
+  <title>New York Organizations Map</title>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+  <script src="https://use.fontawesome.com/releases/v6.2.0/js/all.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" />
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'css/map.css' %}" />
+  <script type="module" src="{% static 'js/map.js' %}"></script>
+</head>
+
+<body>
+  <div class="container">
+    <a href="{% url 'home' %}"><img src="{% static 'images/voluncheer_logo.png' %}" alt="logo" class="logo title"
+        height="80px" /></a>
+    {% block content %}
+    <div>
+      <h2>
+        Search for an address
+        <span style="font-size: 0.5em">
+          <input id="address" type="text" style="width: 20em; border-color: black;" placeholder="Enter a location" />
+        </span>
+      </h2>
     </div>
-    {{ organizations|json_script:"organizations" }}
-    <!-- prettier-ignore -->
-    <script>
-    console.log("Loading Google Maps API...");
-    (g => { var h, a, k, p = "The Google Maps JavaScript API", c = "google", l = "importLibrary", q = "__ib__", m = document, b = window; b = b[c] || (b[c] = {});console.log(b); var d = b.maps || (b.maps = {}), r = new Set, e = new URLSearchParams, u = () => h || (h = new Promise(async (f, n) => { await (a = m.createElement("script")); e.set("libraries", [...r] + ""); for (k in g) e.set(k.replace(/[A-Z]/g, t => "_" + t[0].toLowerCase()), g[k]); e.set("callback", c + ".maps." + q); a.src = `https://maps.${c}apis.com/maps/api/js?` + e; d[q] = f; a.onerror = () => h = n(Error(p + " could not load.")); a.nonce = m.querySelector("script[nonce]")?.nonce || ""; m.head.append(a) })); d[l] ? console.warn(p + " only loads once. Ignoring:", g) : d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)) })({
-      key: "{{key}}",
+    <div id="map"></div>
+    <div id="infowindow-content">
+      <span id="place-name" class="title"></span><br />
+      <span id="place-address"></span>
+    </div>
+    {% endblock %}
+    <p class="text-center top_spac">
+      Copyright &copy 2023 VolunCheer, org. All Rights Reserved.
+    </p>
+  </div>
+  {{ organizations|json_script:"organizations" }}
+  <!-- prettier-ignore -->
+  <script>
+    (g => { var h, a, k, p = "The Google Maps JavaScript API", c = "google", l = "importLibrary", q = "__ib__", m = document, b = window; b = b[c] || (b[c] = {}); var d = b.maps || (b.maps = {}), r = new Set, e = new URLSearchParams, u = () => h || (h = new Promise(async (f, n) => { await (a = m.createElement("script")); e.set("libraries", [...r] + ""); for (k in g) e.set(k.replace(/[A-Z]/g, t => "_" + t[0].toLowerCase()), g[k]); e.set("callback", c + ".maps." + q); a.src = `https://maps.${c}apis.com/maps/api/js?` + e; d[q] = f; a.onerror = () => h = n(Error(p + " could not load.")); a.nonce = m.querySelector("script[nonce]")?.nonce || ""; m.head.append(a) })); d[l] ? console.warn(p + " only loads once. Ignoring:", g) : d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)) })({
+      key: "{{ key }}",
       v: "beta",
     });
-    
   </script>
-  <!-- <script
-      src="https://maps.googleapis.com/maps/api/js?key={{GOOGLE_MAPS_API_KEY}}&libraries=places&callback=initMap&v=weekly"
-      defer
-    ></script> -->
-  </body>
+</body>
+
 </html>
