--- a/voluncheer/templates/volunteer/vol_org_view.html
+++ b/voluncheer/templates/volunteer/vol_org_view.html
@@ -44,7 +44,7 @@
         {% csrf_token %}
         {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
         {% for opportunity in opportunity_lists %}
-        {% if opportunity.is_published %}
+        {% if opportunity.is_published and not opportunity.is_archived %}
         <article>
             {% if opportunity.photo %}
             <a href="#"><img src="{{opportunity.photo.url}}" alt="" class="vol-position-image" width="275px" /></a>
