--- a/voluncheer/templates/opportunityboard/postanopportunity.html
+++ b/voluncheer/templates/opportunityboard/postanopportunity.html
@@ -116,9 +116,10 @@
         </div>
     </div>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key={{GOOGLE_MAPS_API_KEY}}&libraries=places&callback=initMap&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key={{key}}&libraries=places&callback=initMap&v=weekly"
       defer
     ></script>
+    
     <script>
       function initMap(){
         const input = document.getElementById('id_address_1');
