--- a/voluncheer/templates/base.html
+++ b/voluncheer/templates/base.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     {% include 'navbar.html' %}
+    {% include 'messages.html' %}
     <div class="container my-4">
       <div class="row justify-content-center">
         <div class="col-md-10 col-sm-12">
@@ -50,14 +51,14 @@
           </div>
           <div class="">
             <div class="card-body">
-              {% for message in messages %}
+              <!-- {% for message in messages %}
                 <div class="alert {{ message.tags }} alert-dismissible fade show" role="alert">
                   {{ message }}
                   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
                 </div>
-              {% endfor %}
+              {% endfor %} -->
               {% block content %}
               {% endblock %}
             </div>
