remove online user section

--- a/voluncheer/templates/chatroom/room.html
+++ b/voluncheer/templates/chatroom/room.html
@@ -68,13 +68,13 @@
                     </div>
                 </div>
     
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col-12 col-md-4">
                         <label for="onlineUsers">Online users</label>
                         <select multiple class="form-control" id="onlineUsersSelector">
                         </select>
                     </div>
-                </div>
+                </div> -->
                 {{ room.name|json_script:"roomName" }}
             <p class="text-center top_spac"> Copyright &copy 2023 VolunCheer, org.  All Rights Reserved.</p>
     
