--- a/voluncheer/templates/profiles/profile.html
+++ b/voluncheer/templates/profiles/profile.html
@@ -139,12 +139,10 @@
         </div>
 
         <h2>PAST OPPORTUNITIES</h2>
-        <div class="card" id="saved_opportunities">
-            {% csrf_token %}
+        <div class="card" id="past_opportunities">
                 {% for opportunity in opportunity_lists %}
                     {% if opportunity.is_archived %}
                     <article>
-                        <a href="{% url 'update_an_opportunity' opportunity.pk %}"><i id="opportunity-edit-{{opportunity.pk}}" class="fa fa-pen fa-xs edit"></i></a>
 					    {% if opportunity.photo %}
 					    <a href="#"><img src="{{opportunity.photo.url}}" alt="" class="vol-position-image" width="275px"/></a>
                         {% endif %}
