--- a/voluncheer/templates/profiles/profile.html
+++ b/voluncheer/templates/profiles/profile.html
@@ -70,7 +70,7 @@
             {% csrf_token %}
                 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
                 {% for opportunity in opportunity_lists %}
-                    {% if opportunity.is_published %}
+                    {% if opportunity.is_published and not opportunity.is_archived %}
                     <article>
                         {% if user.pk is curr_user.pk %}
                         <a href="{% url 'update_an_opportunity' opportunity.pk %}"><i id="opportunity-edit-{{opportunity.pk}}" class="fa fa-pen fa-xs edit"></i></a>
@@ -132,6 +132,26 @@
                         <p class="vol-position-description-h2">End: {{ opportunity.end }}</p>
                         <p class="vol-position-description-h2">{{ opportunity.description }}</p>
                         <div class="url"><a href="#" id="{{opportunity.pk}}" class="opportunities-detail-btn">Details</a></div>
+                        <hr align="center">
+				    </article>
+                    {% endif %}
+                {% endfor %}
+        </div>
+
+        <h2>PAST OPPORTUNITIES</h2>
+        <div class="card" id="past_opportunities">
+                {% for opportunity in opportunity_lists %}
+                    {% if opportunity.is_archived %}
+                    <article>
+					    {% if opportunity.photo %}
+					    <a href="#"><img src="{{opportunity.photo.url}}" alt="" class="vol-position-image" width="275px"/></a>
+                        {% endif %}
+					    <p class="vol-position-description-h1">{{ opportunity.title }}</p>
+                        <p class="vol-position-description-h3">Pubdate: {{ opportunity.pubdate }}</p>
+                        <p class="vol-position-description-h2">Address: {{ opportunity.address_1 }}</p>
+                        <p class="vol-position-description-h2">Date: {{ opportunity.date }}</p>
+                        <p class="vol-position-description-h2">End: {{ opportunity.end }}</p>
+                        <p class="vol-position-description-h2">{{ opportunity.description }}</p>
                         <hr align="center">
 				    </article>
                     {% endif %}
