add recurring wrapper

--- a/voluncheer/static/css/app.css
+++ b/voluncheer/static/css/app.css
@@ -475,3 +475,14 @@ label[for=photo-clear_id] {
 .hidden {
     display: none;
 }
+
+.opportunity-siblings {
+    display: none;
+}
+
+.recurrings {
+    background-color: #e8f5ff;
+    border-radius: 20px;
+    padding: 5px;
+    margin-bottom: 10px;
+}
