--- a/voluncheer/templates/profiles/profile.html
+++ b/voluncheer/templates/profiles/profile.html
@@ -109,6 +109,69 @@
                         <hr align="center">
 				    </article>
                 {% endfor %}
+                
+        </div>
+        <h2>RECURRING OPPORTUNITIES</h2>
+        <div class="card">
+            {% for opportunity in recurring_posted_opportunity_lists %}
+                {% if opportunity.is_published %}
+                    <article>
+                        {% if user.pk is curr_user.pk %}
+                        <a href="{% url 'update_an_opportunity' opportunity.pk %}"><i id="opportunity-edit-{{opportunity.pk}}" class="fa fa-pen fa-xs edit"></i></a>
+                        {% endif %}
+                        {% if opportunity.photo %}
+                        <a href="#"><img src="{{opportunity.photo.url}}" alt="" class="vol-position-image" width="275px"/></a>
+                        {% endif %}
+                        <p class="vol-position-description-h1">{{ opportunity.title }}</p>
+                        <p class="vol-position-description-h3">Pubdate: {{ opportunity.pubdate }}</p>
+                        <p class="vol-position-description-h2">Address: {{ opportunity.address_1 }}</p>
+                        <p class="vol-position-description-h2">Date: {{ opportunity.date }}</p>
+                        <p class="vol-position-description-h2">End: {{ opportunity.end }}</p>
+                        <p class="vol-position-description-h2">{{ opportunity.description }}</p>
+                        {% if user.pk is curr_user.pk %}
+                        <form method="get" id="opportunities-detail-{{opportunity.pk}}-form" class="opportunities-detail-form" action="{% url 'attendance' opportunity.pk %}">
+                            <div id="volunteer-attandence">
+                                <p class="vol-position-description-h1">Volunteer attendance:</p>
+                                {% for volunteer in opportunity.volunteers.all %}
+                                    {% if volunteer in opportunity.attended_volunteers.all %}
+                                    <div class="sticky-note green">
+                                        <input type="checkbox" class="volunteer-attandence" name="volunteer-attended" value="{{volunteer.pk}}">Attended
+                                    {% else %}
+                                    <div class="sticky-note">
+                                        <input type="checkbox" class="volunteer-attandence" name="volunteer-attended" value="{{volunteer.pk}}">Did Not Attend
+                                    {% endif %} 
+                                        <br>
+                                        Name: <a href="{%url 'profile' volunteer.pk%}">{{volunteer.first_name}} {{volunteer.last_name}}</a>
+                                        {% if volunteer.photo %}
+                                        <img src="{{volunteer.photo.url}}" alt="profile pic" width="100" height="100"/>
+                                        {% endif %}
+                                    </div>
+                                {% endfor %}
+                            </div>
+                            <button type="submit" id="opportunities-detail-form-btn" class="opportunities-detail-form-submit">Confirm Attendence</button>
+                        </form>
+                        <div class="url"><a href="#opportunity-edit-{{opportunity.pk}}" id="opportunities-detail-{{opportunity.pk}}" class="opportunities-detail-btn" onclick="ShowDetail(this)">Details</a></div>
+                        {% endif %}
+                        
+                    </article>
+                    <div id="opportunity-sibling-{{opportunity.pk}}-siblings" class="opportunity-siblings">
+                    {% for sibling in opportunity.recurrence_siblings.all %}
+                    <article class="recurrings">
+                        {% if user.pk is curr_user.pk %}
+                        <a href="{% url 'update_an_opportunity' sibling.pk %}"><i id="opportunity-edit-{{sibling.pk}}" class="fa fa-pen fa-xs edit"></i></a>
+                        {% endif %}
+                        <p class="vol-position-description-h1">{{ sibling.title }}</p>
+                        <p class="vol-position-description-h2">Address: {{ sibling.address_1 }}</p>
+                        <p class="vol-position-description-h2">Date: {{ sibling.date }}</p>
+                        <p class="vol-position-description-h2">End: {{ sibling.end }}</p>
+                        <p class="vol-position-description-h2">{{ sibling.description }}</p>
+                    </article>
+                    {% endfor %}
+                    </div>
+                    <div class="url"><a href="#{{opportunity.pk}}-siblings" id="opportunity-sibling-{{opportunity.pk}}" class="opportunities-detail-btn" onclick="ShowSibling(this)">Show All Recurrings</a></div>
+                    <hr align="center">
+                {% endif %}
+            {% endfor %}
         </div>
 
         {% if user.pk is curr_user.pk %}
@@ -127,9 +190,25 @@
                         <p class="vol-position-description-h2">Date: {{ opportunity.date }}</p>
                         <p class="vol-position-description-h2">End: {{ opportunity.end }}</p>
                         <p class="vol-position-description-h2">{{ opportunity.description }}</p>
-                        <div class="url"><a href="#" id="{{opportunity.pk}}" class="opportunities-detail-btn">Details</a></div>
                         <hr align="center">
 				    </article>
+                {% endfor %}
+                {% for opportunity in recurring_posted_opportunity_lists %}
+                    {% if not opportunity.is_published %}
+                        <article>
+                            <a href="{% url 'update_an_opportunity' opportunity.pk %}"><i id="opportunity-edit-{{opportunity.pk}}" class="fa fa-pen fa-xs edit"></i></a>
+                            {% if opportunity.photo %}
+                            <a href="#"><img src="{{opportunity.photo.url}}" alt="" class="vol-position-image" width="275px"/></a>
+                            {% endif %}
+                            <p class="vol-position-description-h1">{{ opportunity.title }}</p>
+                            <p class="vol-position-description-h3">Pubdate: {{ opportunity.pubdate }}</p>
+                            <p class="vol-position-description-h2">Address: {{ opportunity.address_1 }}</p>
+                            <p class="vol-position-description-h2">Date: {{ opportunity.date }}</p>
+                            <p class="vol-position-description-h2">End: {{ opportunity.end }}</p>
+                            <p class="vol-position-description-h2">{{ opportunity.description }}</p>
+                            <hr align="center">
+                        </article>
+                    {% endif %}
                 {% endfor %}
         </div>
 
