--- a/voluncheer/templates/volunteer/vol_org_view.html
+++ b/voluncheer/templates/volunteer/vol_org_view.html
@@ -43,8 +43,7 @@
     <div class="card">
         {% csrf_token %}
         {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-        {% for opportunity in opportunity_lists %}
-        {% if opportunity.is_published and not opportunity.is_archived %}
+        {% for opportunity in recurring_posted_opportunity_lists %}
         <article>
             {% if opportunity.photo %}
             <a href="#"><img src="{{opportunity.photo.url}}" alt="" class="vol-position-image" width="275px" /></a>
@@ -66,7 +65,6 @@
             {% endif %}
             <hr align="center">
         </article>
-        {% endif %}
         {% endfor %}
     </div>
 </div>
