--- a/voluncheer/static/css/app.css
+++ b/voluncheer/static/css/app.css
@@ -202,6 +202,23 @@ hr {
     height: 50px;
 }
 
+.next-badge img {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 20px;
+    border-radius: 50%;
+    box-shadow: 0px 0px 5px 1px grey;
+    margin: 0 -10px;
+    width: 50px;
+    height: 50px;
+    float: right;
+}
+
+.next-badge label {
+    font-size: 20px;
+}
+
 .edit {
     position: absolute;
     color: #e7e7e8;
