Add a message when the chatroom is empty and don't redirect.

--- a/voluncheer/templates/chatroom/chat_homepage.html
+++ b/voluncheer/templates/chatroom/chat_homepage.html
@@ -20,7 +20,8 @@
                 <div class="col-12 col-md-8">
                     <div class="mb-2">
                         <label for="roomInput">Enter a room name to connect to it:</label>
-                        <input type="text" class="form-control" id="roomInput" placeholder="Room name">
+                        <input type="text" class="form-control" id="roomInput" placeholder="Room name" required>
+                        <span id="room-error" class="small" style="color:red"></span>
                         <small id="roomInputHelp" class="form-text text-muted">If the room doesn't exist yet, it will be created for you.</small>
                     </div>
                     <button type="button" id="roomConnect" class="btn btn-success">Connect</button>
