--- a/voluncheer/templates/chatroom/room.html
+++ b/voluncheer/templates/chatroom/room.html
@@ -1,48 +1,86 @@
-<!-- placeholder room file -->
+{% extends 'base.html' %}
 {% load static %}
+{% block content %}
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link rel="stylesheet" href="{% static 'css/chatroom.css' %}">
+<!-- placeholder room file -->
+<style>
+    #chatLog {
+        height: 300px;
+        background-color: #FFFFFF;
+        resize: none;
+    }
 
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>django-channels-chat</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
-        <style>
-            #chatLog {
-                height: 300px;
-                background-color: #FFFFFF;
-                resize: none;
-            }
+    #onlineUsersSelector {
+        height: 300px;
+    }
+</style>
 
-            #onlineUsersSelector {
-                height: 300px;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="container mt-3 p-5">
-            <h2>django-channels-chat</h2>
-            <div class="row">
-                <div class="col-12 col-md-8">
-                    <div class="mb-2">
-                        <label for="chatLog">Room: #{{ room.name }}</label>
-                        <textarea class="form-control" id="chatLog" readonly></textarea>
+        <div class="container">
+            <div class="messaging">
+                <div class="inbox_msg">
+                    <div class="inbox_people">
+                      <div class="headind_srch">
+                        <div class="recent_heading">
+                          <h4>Recent</h4>
+                        </div>
+                        <div class="srch_bar">
+                          <div class="stylish-input-group">
+                            <input type="text" class="search-bar"  placeholder="Search" >
+                            <span class="input-group-addon">
+                            <button type="button"> <i class="fa fa-search" aria-hidden="true"></i> </button>
+                            </span> </div>
+                        </div>
+                      </div>
+                      <div class="inbox_chat">
+                      {% for room in rooms %}
+                        <div class="chat_list active_chat" id="{{ room }}">
+                          <div class="chat_people">
+                            <div class="chat_img"> <img src="{% static "images/organize_image_0.png" %}" alt="TestOrg"> </div>
+                            <div class="chat_ib">
+                              <h5>{{ room }} <span class="chat_date">Feb 5</span></h5>
+                              <p>Congratulations, you've been selected as a volunteer, see you on your first day this Friday!</p>
+                            </div>
+                          </div>
+                        </div>
+                      {% endfor %}
+                      </div>
                     </div>
-                    <div class="input-group">
-                        <input type="text" class="form-control" id="chatMessageInput" placeholder="Enter your chat message">
-                        <div class="input-group-append">
-                            <button class="btn btn-success" id="chatMessageSend" type="button">Send</button>
+    
+                    <div class="mesgs">
+                        <div class="msg_history" id="msg_history">
+                            <div class="incoming_msg">
+                              <div class="received_msg">
+                                <div class="received_withd_msg">
+                                  <p>You are now in chatroom: {{ room }}</p>
+                                </div>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="input-group">
+                            <input type="text" class="form-control" id="chatMessageInput" placeholder="Enter your chat message">
+                            <div class="input-group-append">
+                                <button class="btn btn-success" id="chatMessageSend" type="button">Send</button>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-4">
-                    <label for="onlineUsers">Online users</label>
-                    <select multiple class="form-control" id="onlineUsersSelector">
-                    </select>
-                </div>
+    
+                <!-- <div class="row">
+                    <div class="col-12 col-md-4">
+                        <label for="onlineUsers">Online users</label>
+                        <select multiple class="form-control" id="onlineUsersSelector">
+                        </select>
+                    </div>
+                </div> -->
+                {{ room.name|json_script:"roomName" }}
+            <p class="text-center top_spac"> Copyright &copy 2023 VolunCheer, org.  All Rights Reserved.</p>
+    
             </div>
-            {{ room.name|json_script:"roomName" }}
         </div>
-        <script src="{% static 'admin/js/room.js' %}"></script>
-    </body>
-</html>
+
+<script src="{% static 'admin/js/room.js' %}"></script>
+
+{% endblock %}
