--- a/voluncheer/templates/opportunityboard/updateanopportunity.html
+++ b/voluncheer/templates/opportunityboard/updateanopportunity.html
@@ -117,7 +117,7 @@
         </div>
     </div>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key={{GOOGLE_MAPS_API_KEY}}&libraries=places&callback=initMap&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key={{key}}&libraries=places&callback=initMap&v=weekly"
       defer
     ></script>
     <script>
