--- a/voluncheer/templates/chatroom/room.html
+++ b/voluncheer/templates/chatroom/room.html
@@ -7,11 +7,6 @@
 <link rel="stylesheet" href="{% static 'css/chatroom.css' %}">
 <!-- placeholder room file -->
 <style>
-    #chatLog {
-        height: 300px;
-        background-color: #FFFFFF;
-        resize: none;
-    }
 
     #onlineUsersSelector {
         height: 300px;
@@ -38,7 +33,7 @@
                       {% for room in rooms %}
                         <div class="chat_list active_chat" id="{{ room }}">
                           <div class="chat_people">
-                            <div class="chat_img"> <img src="{% static "images/organize_image_0.png" %}" alt="TestOrg"> </div>
+                            <div class="chat_img"> <img src="{% static 'images/organize_image_0.png' %}" alt="TestOrg"> </div>
                             <div class="chat_ib">
                               <h5>{{ room }} <span class="chat_date">Feb 5</span></h5>
                               <p>Congratulations, you've been selected as a volunteer, see you on your first day this Friday!</p>
@@ -58,11 +53,26 @@
                                 </div>
                               </div>
                             </div>
+                            {% for msg in message %}
+                            <div class="incoming_msg">
+                              {% if msg.volunteer %}
+                                <div class="incoming_msg_img"> <img src="{{ msg.volunteer.photo.url }}" alt="{{ msg.volunteer }}"> </div>
+                              {% endif %}
+                              {% if msg.organization %}
+                                <div class="incoming_msg_img"> <img src="{{ msg.organization.photo.url }}" alt="{{ msg.organization }}"> </div>
+                              {% endif %}
+                              <div class="received_msg">
+                                <div class="received_withd_msg">
+                                  <p>{{ msg.content }}</p>
+                                  <span class="time_date">{{ msg.timestamp }}</span></div>
+                              </div>
+                            </div>
+                            {% endfor %}
                         </div>
                         <div class="input-group">
                             <input type="text" class="form-control" id="chatMessageInput" placeholder="Enter your chat message">
                             <div class="input-group-append">
-                                <button class="btn btn-success" id="chatMessageSend" type="button">Send</button>
+                                <button class="btn btn-success" id="chatMessageSend" type="button" onclick="sendChatMsg()">Send</button>
                             </div>
                         </div>
                     </div>
@@ -76,6 +86,10 @@
                     </div>
                 </div> -->
                 {{ room.name|json_script:"roomName" }}
+                {{ user.pk|json_script:"userPK" }}
+                {{ volunteer.photo.url|json_script:"volunteerJson" }}
+                {{ organization.photo.url|json_script:"organizationJson" }}
+
             <p class="text-center top_spac"> Copyright &copy 2023 VolunCheer, org.  All Rights Reserved.</p>
     
             </div>
